2000-05-19  Andreas Hyden  <a.hyden@cyberpoint.se>

	* gmenu.desktop: Added Swedish translation to comment.

2000-05-10  Jacob Berkman  <jacob@helixcode.com>

	* main.c (main): done explicitely specify the line style

2000-04-03  Alastair McKinstry  <mckinstry@computer.org>

	* gmenu.desktop: Added Irish translation.

2000-03-10  Peter Hawkins  <peterhawkins@ozemail.com.au>

	* main.c: Trivial change to raise any existing about boxes on About.

Thu Feb 10 19:52:28 2000  George Lebl <jirka@5z.com>

	* tree.c,main.c,gmenu.h,treedel.c,treednd.c,save.c:  Add all four
	  types of dentries just like the panel dentry editting.  Make menu
	  naming consistent with the panel.  Add ability to edit the
	  system applets menu.  And convert one g_print into
	  gnome_error_dialog.  Whoops a conflict, oh well this patch does
	  a bit more anyhow.

2000-02-10  Jacob Berkman  <jacob@helixcode.com>

	* tree.c (menu_tree_populate): 
	* edit.c (edit_area_set_to): sync the menu names with the 'new'
	names in the HEAD panel.

	fixes bug #6102

1999-10-19  Ettore Perazzoli  <ettore@gnu.org>

	* main.c (main): Set the infolabel's horizontal usize to 1 so that
	it does not horribly change its size while browsing menus anymore.
	Also, set the alignment so that it's left justified.  Likewise for
	the directory.
	* edit.c (edit_area_new): Likewise for the path label.

1999-10-05  Jacob Berkman  <jberkman@andrew.cmu.edu>

	* edit.c (edit_area_new): make the revert button
	defaultable, so that the 2 buttons are the same
	height

1999-09-22  Jacob Berkman  <jberkman@andrew.cmu.edu>

	* .cvsignore: updated

1999-06-27  Nat Friedman  <nat@gnome-support.com>

	* main.c (help_menu): Use gnome-app-helper.h standard menu macros.
	(main_menu): Likewise.

1999-04-25  Ettore Perazzoli  <ettore@comm2000.it>

	* gmenu.desktop: Added Italian translations.

1999-04-14  Matthias Warkus  <mawa@iname.com>

	* gmenu.desktop: Fixed/added [de] translations.
